--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qrcode-logo": "^4.0.0",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
