--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.303.0",
     "motion": "^12.23.12",
     "next": "^14.0.4",
+    "openai": "^5.18.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
