--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "lucide-react": "^0.303.0",
     "motion": "^12.23.12",
     "next": "^14.0.4",
+    "next-themes": "^0.4.6",
     "openai": "^5.18.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qrcode-logo": "^4.0.0",
     "rough-notation": "^0.5.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
